force-app/main/default/objects/Entrega_Material__c/Entrega_Material__c.object-meta.xml
<CustomObject>
    <description>Este objeto está obsoleto. Ya no se usa.</description>
    <label>Entrega Material</label>
    <nameField>
        <displayFormat>KI-{0000}</displayFormat>
        <label>Nombre de Entrega de kits de inicio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entregas Materiales</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>