force-app/main/default/objects/Entrega_Material__c/fields/Cantidad__c.field-meta.xml
<CustomField>
    <fullName>Cantidad__c</fullName>
    <label>Cantidad</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>