force-app/main/default/objects/Entrega_Material__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <label>Descripción</label>
    <type>TextArea</type>
</CustomField>