force-app/main/default/objects/Entrega_Material__c/fields/Profesional__c.field-meta.xml
<CustomField>
    <fullName>Profesional__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profesional</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Profesional de la salud</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Entregas_de_Kits_de_Inicio</relationshipName>
    <type>Lookup</type>
</CustomField>